--- a/learning-spring-boot-helloworld/pom.xml
+++ b/learning-spring-boot-helloworld/pom.xml
@@ -3,10 +3,21 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.xiangleosng</groupId>
-		<artifactId>learning-spring-boot</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.6.RELEASE</version>
+        <relativePath /> <!-- lookup parent from repository -->
+    </parent>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+    </properties>
+
 	<artifactId>learning-spring-boot-helloworld</artifactId>
 
 	<dependencies>
