--- a/learning-spring-boot-tomcat/src/main/resources/application.properties
+++ b/learning-spring-boot-tomcat/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.application.name=spring-boot
-spring.profiles.active=test
+spring.profiles.active=dev
 
 server.tomcat.basedir=my-tomcat
 server.tomcat.accesslog.enabled=true
