--- a/learning-spring-boot-mysql/src/main/resources/application-dev.properties
+++ b/learning-spring-boot-mysql/src/main/resources/application-dev.properties
@@ -2,27 +2,27 @@
 spring.boot.corp.name=xianglesong
 
 # spring datasource
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&autoReconnect=true
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.primary.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.primary.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&autoReconnect=true
+spring.datasource.primary.username=root
+spring.datasource.primary.password=123456
+spring.datasource.primary.driver-class-name=com.mysql.jdbc.Driver
 
-spring.datasource.initialSize=5
-spring.datasource.minIdle=20
-spring.datasource.maxActive=20
-spring.datasource.maxWait=60000
-spring.datasource.timeBetweenEvictionRunsMillis=60000
-spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=SELECT 1
-spring.datasource.testWhileIdle=true
-spring.datasource.testOnBorrow=false
-spring.datasource.testOnReturn=false
-spring.datasource.poolPreparedStatements=false
-spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
-spring.datasource.filters=stat,wall,log4j
-spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-#spring.datasource.useGlobalDataSourceStat=true
+spring.datasource.primary.initialSize=5
+spring.datasource.primary.minIdle=20
+spring.datasource.primary.maxActive=20
+spring.datasource.primary.maxWait=60000
+spring.datasource.primary.timeBetweenEvictionRunsMillis=60000
+spring.datasource.primary.minEvictableIdleTimeMillis=300000
+spring.datasource.primary.validationQuery=SELECT 1
+spring.datasource.primary.testWhileIdle=true
+spring.datasource.primary.testOnBorrow=false
+spring.datasource.primary.testOnReturn=false
+spring.datasource.primary.poolPreparedStatements=false
+spring.datasource.primary.maxPoolPreparedStatementPerConnectionSize=20
+spring.datasource.primary.filters=stat,wall,log4j
+spring.datasource.primary.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+#spring.datasource.primary.useGlobalDataSourceStat=true
 
 ###
 
