--- a/learning-spring-boot-elasticsearch/src/main/resources/application-dev.properties
+++ b/learning-spring-boot-elasticsearch/src/main/resources/application-dev.properties
@@ -1,3 +1,3 @@
 ### elasticsearch
-spring.elasticsearch.clustername = elasticsearch
+spring.elasticsearch.clustername = my-application
 spring.elasticsearch.cluster-nodes  = localhost:9300
