--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 		<module>learning-spring-boot-mongodb</module>
 		<module>learning-spring-boot-elasticsearch</module>
 		<module>learning-spring-boot-kafka</module>
+		<module>learning-spring-boot-test</module>
 	</modules>
 
 </project>
