--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 		<module>learning-spring-boot-kafka</module>
 		<module>learning-spring-boot-test</module>
 		<module>learning-spring-boot-release</module>
+		<module>learning-spring-boot-integration</module>
 	</modules>
 
 </project>
